[package]
name = "three-nodes-embedded"
version = "0.2.0"
edition = "2024"


[dependencies]
d-engine = { path = "../../d-engine" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdrhistogram = "7"
rand = "0.8"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
